--- a/.github/workflows/quarto-publish.yml
+++ b/.github/workflows/quarto-publish.yml
@@ -14,20 +14,14 @@ jobs:
       - name: Set up Quarto
         uses: quarto-dev/quarto-actions/setup@v2
       
-      # add software dependencies here
+      - name: Render Book project
+        uses: quarto-dev/quarto-actions/render@v2
+        with:
+          to: html
+          path: index.qmd
 
-      # - name: Render Quarto Project
-      #   uses: quarto-dev/quarto-actions/render@v2
-      #   with:
-      #     to: html # If set, it will be equivalent to `quarto render --to html`
-      #     path: index.qmd # By default, the current working dir is used i.e `quarto render .`
-
-      - name: Publish to GitHub Pages (and render)
-        uses: quarto-dev/quarto-actions/publish@v2
+      - name: Publish HTML book
+          uses: quarto-dev/quarto-actions/publish@v2
         with:
           target: gh-pages
-#          render: false
-          path: index.qmd
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # this secret is always available for github actions
-      
+          render: false      
