--- a/.github/workflows/quarto-publish.yml
+++ b/.github/workflows/quarto-publish.yml
@@ -1,8 +1,13 @@
 on:
   push:
-    branches: web
+    branches: main
+    paths:
+      - index.qmd
 
 name: Render and Publish
+
+permissions:
+   contents: write
 
 jobs:
   build-deploy:
@@ -13,15 +18,22 @@ jobs:
         
       - name: Set up Quarto
         uses: quarto-dev/quarto-actions/setup@v2
-      
-      - name: Render Book project
-        uses: quarto-dev/quarto-actions/render@v2
-        with:
-          to: html
-          path: index.qmd
 
-      - name: Publish HTML book
-        uses: quarto-dev/quarto-actions/publish@v2
+      - uses: r-lib/actions/setup-r@v2
+        with: 
+          r-version: '4.2.0' # The R version to download (if necessary) and use.
+
+      - name: Install dependencies
+        run: |
+          install.packages(c("rmarkdown"))
+        shell: Rscript {0}
+
+
+      - name: Render Book project
+        run: quarto render index.qmd
+
+      - name: Deploy 🚀
+        uses: JamesIves/github-pages-deploy-action@4.1.4
         with:
-          target: gh-pages
-          render: false      
+          branch: gh-pages # The branch the action should deploy to.
+          folder: docs # The folder the action should deploy.
